<resources>
    <string name="app_name">AppLanguageChange</string>
    <string name="android_app_developer">Android App Developer</string>
    <string name="shubham_sahu">Shubham Sahu</string>
    <string name="seasia_infotech">Seasia Infotech</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="russian">Russian</string>
    <string name="title_activity_details">Details</string>
    <string name="des">An Android developer is responsible for developing applications for devices powered by the Android operating system. Due to the fragmentation of this ecosystem, an Android developer must pay special attention to the application\'s compatibility with multiple versions of Android and device types.</string>
    <string name="goNext">Go Next</string>
</resources>